AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/$(NATIVE_DIR)
bin_PROGRAMS =fl_test fl_test2 dir_test dir_test2 hd_test hd_test2 hd_test3 \
        file_test file_test2 file_test3 del_test bootdisk \
        rename hardfile rename2 hardfile2 access comment undel readonly \
	undel2 dispsect progbar undel3

fl_test_SOURCES = fl_test.c
fl_test_LDADD = $(top_builddir)/src/libadf.la
fl_test_DEPENDENCIES = $(top_builddir)/src/libadf.la

fl_test2_SOURCES = fl_test2.c
fl_test2_LDADD = $(top_builddir)/src/libadf.la
fl_test2_DEPENDENCIES = $(top_builddir)/src/libadf.la

dir_test_SOURCES = dir_test.c
dir_test_LDADD = $(top_builddir)/src/libadf.la
dir_test_DEPENDENCIES = $(top_builddir)/src/libadf.la

dir_test2_SOURCES = dir_test2.c
dir_test2_LDADD = $(top_builddir)/src/libadf.la
dir_test2_DEPENDENCIES = $(top_builddir)/src/libadf.la

hd_test_SOURCES = hd_test.c
hd_test_LDADD = $(top_builddir)/src/libadf.la
hd_test_DEPENDENCIES = $(top_builddir)/src/libadf.la

hd_test2_SOURCES = hd_test2.c
hd_test2_LDADD = $(top_builddir)/src/libadf.la
hd_test2_DEPENDENCIES = $(top_builddir)/src/libadf.la

hd_test3_SOURCES = hd_test3.c
hd_test3_LDADD = $(top_builddir)/src/libadf.la
hd_test3_DEPENDENCIES = $(top_builddir)/src/libadf.la

file_test_SOURCES = file_test.c
file_test_LDADD = $(top_builddir)/src/libadf.la
file_test_DEPENDENCIES = $(top_builddir)/src/libadf.la

file_test2_SOURCES = file_test2.c
file_test2_LDADD = $(top_builddir)/src/libadf.la
file_test2_DEPENDENCIES = $(top_builddir)/src/libadf.la

file_test3_SOURCES = file_test3.c
file_test3_LDADD = $(top_builddir)/src/libadf.la
file_test3_DEPENDENCIES = $(top_builddir)/src/libadf.la

del_test_SOURCES = del_test.c
del_test_LDADD = $(top_builddir)/src/libadf.la
del_test_DEPENDENCIES = $(top_builddir)/src/libadf.la

bootdisk_SOURCES = bootdisk.c
bootdisk_LDADD = $(top_builddir)/src/libadf.la
bootdisk_DEPENDENCIES = $(top_builddir)/src/libadf.la

rename_SOURCES = rename.c
rename_LDADD = $(top_builddir)/src/libadf.la
rename_DEPENDENCIES = $(top_builddir)/src/libadf.la

hardfile_SOURCES = hardfile.c
hardfile_LDADD = $(top_builddir)/src/libadf.la
hardfile_DEPENDENCIES = $(top_builddir)/src/libadf.la

rename2_SOURCES = rename2.c
rename2_LDADD = $(top_builddir)/src/libadf.la
rename2_DEPENDENCIES = $(top_builddir)/src/libadf.la

hardfile2_SOURCES = hardfile2.c
hardfile2_LDADD = $(top_builddir)/src/libadf.la
hardfile2_DEPENDENCIES = $(top_builddir)/src/libadf.la

access_SOURCES = access.c
access_LDADD = $(top_builddir)/src/libadf.la
access_DEPENDENCIES = $(top_builddir)/src/libadf.la

comment_SOURCES = comment.c
comment_LDADD = $(top_builddir)/src/libadf.la
comment_DEPENDENCIES = $(top_builddir)/src/libadf.la

undel_SOURCES = undel.c
undel_LDADD = $(top_builddir)/src/libadf.la
undel_DEPENDENCIES = $(top_builddir)/src/libadf.la

readonly_SOURCES = readonly.c
readonly_LDADD = $(top_builddir)/src/libadf.la
readonly_DEPENDENCIES = $(top_builddir)/src/libadf.la

undel2_SOURCES = undel2.c
undel2_LDADD = $(top_builddir)/src/libadf.la
undel2_DEPENDENCIES = $(top_builddir)/src/libadf.la

dispsect_SOURCES = dispsect.c
dispsect_LDADD = $(top_builddir)/src/libadf.la
dispsect_DEPENDENCIES = $(top_builddir)/src/libadf.la

progbar_SOURCES = progbar.c
progbar_LDADD = $(top_builddir)/src/libadf.la
progbar_DEPENDENCIES = $(top_builddir)/src/libadf.la

undel3_SOURCES = undel3.c
undel3_LDADD = $(top_builddir)/src/libadf.la
undel3_DEPENDENCIES = $(top_builddir)/src/libadf.la

